fixed map overflow

--- a/app/assets/stylesheets/subunits.scss
+++ b/app/assets/stylesheets/subunits.scss
@@ -21,7 +21,7 @@ $blue: #3354EC;
 
 .info-square {
     padding: 5px !important;
-    height: 400px;
+    height: 40vh;
 }
 
 .holder-extern {
